@startuml vista-estatica

class GestorRegRRes{
    -listaESNoRevisados
    -eventoSismicoSeleccionado :EventoSismico
    -estadoRechazado :Estado
    -estadoConfirmado :Estado
    -listaDatosSeriesTemporales
    -empleadoLogueado :Empleado
    -estadoBloqueadoEnRevision :Estado
    -fechaHoraActual
    -nombreAlcance
    -nombreOrigenGeneracion
    -nombreClasificacion
    -ultimoCambioDeEstado :CambioEstado
    -sismografos :Sismografo
    -seleccionResultado

    +nuevaRevisionES()
    +buscarESNoRevisados()
    +ordenarEventosSismicosPorFechaYHora()
    +tomarSeleccionES()
    +buscarEstadoBloqueadoEnRev()
    +bloquearEventoSismico()
    +tomarFechaHoraActual()
    +buscarEmpleadoLogueado()
    +buscarDatosEventoSismico()
    +buscarDatosSeriesTemporales()
    +llamarCUGenerarSismograma()
    +tomarSeleccionResultado()
    +validarDatosMinimos()
    +buscarEstadoRechazado()
    +rechazarEventoSismico()
    +finCU()
}

class PanRegRRes{
    -opcRegRRevision
    -eventosComboBox
    -origentxt
    -alcancetxt
    -clasificaciontxt
    -seleccionarButton
    -alcanceLabel
    -clasificacionLabel
    -origenDeGeneracionLabel
    -rechazarButton
    -confirmarButton
    -delegarAExpertoButton
    -verMapaButton
    -modificarDatosButton
    -seleccioneResultadoLabel
    -panelPrincipal

    +opcRegResultadoES()
    +abrirPantalla()
    +mostrarESParaSeleccion()
    +tomarSeleccionES()
    +mostrarDatosEventoSismico()
    +habilitarOpcVerMapa()
    +habilitarOpcModificarDatosES()
    +pedirSeleccionResultadoEvento()
    +tomarSeleccionResultado()
}

class AlcanceSismo{
    -descripcion
    -nombre

    +getNombre()
}

class CambioEstado{
    -fechaHoraFin
    -fechaHoraInicio
    -estado :Estado
    -empleadoResponsable: Empleado

    +esActual()
    +setFechaHoraFin()
    +new()
}

class ClasificacionSismo{
    -kmProfundidadDesde
    -kmProfundidadHasta
    -nombre

    +getNombre()
}

class DetalleMuestraSismica{
    -valor
    -tipoDeDato :TipoDeDato

    +getDatos()
}

class Empleado{
    -apellido
    -mail
    -nombre
    -telefono
}

class EstacionSismologica{
    -codigoEstacion
    -documentacionCertificacionAdq
    -fechaSolicitudCertificacion
    -latitud
    -longitud
    -nombre
    -nroCertificacionAdquisicion
    
    +getCodigoEstacion()
}

class Estado{
    -ambito
    -nombreEstado

    +esAutoDetectado()
    +esPendienteDeRevision()
    +esAmbitoEventoSismico()
    +esBloqueadoEnRevision()
    +esRechazado()
}

class EventoSismico{
    -fechaHoraFin
    -fechaHoraOcurrencia
    -latitudEpicentro
    -latitudHipocentro
    -longitudEpicentro
    -longitudHipocentro
    -valorMagnitud
    -estadoActual :Estado
    -cambioEstado :CambioEstado
    -clasificacion :ClasificacionSismo
    -origenGeneracion :OrigenDeGeneracion
    -alcanceSismo :AlcanceSismo
    -serieTemporal :SerieTemporal
    -analistaSuperior: Empleado

    +esAutoDetectado()
    +esPendienteDeRevision()
    +getDatosPrincipales()
    +getFechaHoraOcurrencia()
    +getLatitudEpicentro()
    +getLatitudHipocentro()
    +getLongitudEpicentro()
    +getLongitudHipocentro()
    +getValorMagnitud()
    +revisar()
    +buscarUltimoEstado()
    +crearCambioEstado()
    +setEstadoActual()
    +mostrarAlcance()
    +mostrarClasificacion()
    +mostrarOrigenGeneracion()
    +buscarDatosSeriesTemporales()
    +clasificarDatosPorEstacionSismologica()
    +rechazar()
    +actualizarUltimoEstado()
}

class MuestraSismica{
    -fechaHoraMuestra
    -detalleMuestraSismica :DetalleMuestraSismica

    +getDatos()
}

class OrigenDeGeneracion{
    -nombre
    -descripcion

    +getNombre()
}

class SerieTemporal{
    -condicionAlarma
    -fechaHoraInicioRegistroMuestras
    -fechaHoraRegistro
    -frecuenciaMuestreo
    -estado :Estado
    -muestraSismica :MuestraSismica

    +getDatos()
    +obtenerEstacionSismologica()
}

class Sesion{
    -fechaHoraInicio
    -fechaHoraCierre
    -usuario:Usuario

    +obtenerEmpleadoLogueado()
}

class Sismografo{
    -fechaAdquisicion
    -identificadorSismografo
    -nroSerie
    -serieTemporal :SerieTemporal
    -estacionSismologica :EstacionSismologica
    -estadoActual :Estado
    -cambioEstado :CambioEstado

    +esSismografoDeSerieTemporal()
    +getCodigoEstacion()
}

class TipoDeDato{
    -denominacion
    -nombreUnidadMedida
    -valorUmbral

    +getDenominacion()
}

class Usuario{
    -contrasenia
    -nombreUsuario
    -empleado :Empleado

    +getEmpleado()
}

PanRegRRes ..> GestorRegRRes

GestorRegRRes ..> PanRegRRes

GestorRegRRes ..> EventoSismico

GestorRegRRes ..> Estado

GestorRegRRes ..> Sesion

EventoSismico -->"1" Estado

Sesion -->"1" Usuario

Usuario -->"1" Empleado

CambioEstado -->"1" Estado

CambioEstado -->"1" Empleado

EventoSismico -->"1" AlcanceSismo

EventoSismico -->"1" ClasificacionSismo

EventoSismico -->"1" OrigenDeGeneracion

EventoSismico -->"1..*" SerieTemporal

EventoSismico -->"1..*"CambioEstado
EventoSismico -->"0..1"Empleado

SerieTemporal *-->"1..*" MuestraSismica

SerieTemporal -->"1"Estado
SerieTemporal ..> Sismografo

MuestraSismica *-->"1..*" DetalleMuestraSismica

Sismografo -->"1" Estado

Sismografo -->"1..*" CambioEstado

DetalleMuestraSismica -->"1" TipoDeDato

Sismografo -->"1..*" SerieTemporal

Sismografo -->"1" EstacionSismologica
@enduml